# SphereSurface

./: .gitignore  BoxProjection.cpp  CMakeLists.txt  GlobalMacros.h  LICENSE.mb  Parameterization.cpp  Parameterization.h  README.md  Rectangular.cpp  SphereSurf.fmt  Spherical.cpp  SurfaceSphere  SurfaceSphere.cpp  TwoCaps.cpp  YinYang.cpp  a.out  parameterization.cpp  parameterization.h  surface-sphere  surface-sphere.c
src/: SphereSurface.cpp  Spherical.cpp  SurfaceSphere.cpp  TwoCaps.cpp
